<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="search_results">Search Results</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="keywords">Keywords</string>
    <string name="search_locally">Search locally</string>
    <string name="search_from_web">Search from web</string>
    <string name="use_ingredients_from_kitchen">Use ingredients from My Kitchen</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="no_keyword">You haven\'t entered any keywords!</string>
    <string name="main_mykitchen_button">MyKitchen</string>
    <string name="main_add_button">Add</string>
    <string name="comments_add_button">Add</string>
    <string name="main_search_button">Search</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
    <string name="picture_description">recipe</string>
    <string name="arrow_forward">-&gt;</string>
    <string name="arrow_backward">&lt;-</string>
    <string name="procedure">Procedure</string>
    <string name="ingredients">Ingredients</string>
    <string name="no_source_search">You must select at least one source (local or remote) for your search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="title_activity_edit_recipe">EditRecipeActivity</string>
    <string name="name">Recipe Name</string>
    <string name="recipe_name_hint">Enter a name for this recipe...</string>
    <string name="done">Done</string>
    <string name="no_record_selected">You haven\'t selected any records!</string>
    <string name="delete_succesful">The records have been successfully deleted!</string>
    <string name="add_ingredient">Add/Edit Ingredient</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="show_all">Show All</string>
    <string name="my_kitchen">My Kitchen</string>
    <string name="missing_fields">Some fields are missing!</string>
    <string name="have_ingredient_already_kitchen">The new ingredient could not be added because you already have it in MyKitchen</string>
    <string name="have_ingredient_already_recipe">The new ingredient could not be added because you already have it in this recipe</string>
    <string name="add_photo">Add a Photo</string>
    <string name="remove_photo">Delete Current Photo</string>
    <string name="no_connection">The application was not able to connect to the server</string>
    <string name="comments">Comments</string>
    <string name="title_activity_edit_comments">EditCommentsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_edit_comment">AddEditCommentActivity</string>
    <string name="title_activity_add_edit_comments">AddEditCommentsActivity</string>
    <string name="add_comment">Add Comment</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="photos">Photos</string>
    <string name="my_recipes">My Recipes</string>
    <string name="edit_recipes">Add/Edit Recipes</string>
    <string name="missing_fields_edit">Some fields are missing! A name, procedure and a least one ingredient must be included!</string>
    <string name="recipe_downloaded">Recipe downloaded. Check your list of recipes!</string>
    
    

</resources>