<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">    

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
	    <Button
	        android:id="@+id/btnOk"
	        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
	        android:text="@string/ok" />
	    
	    
	    <Button
	        android:id="@+id/btnDelete"
	        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
	        android:text="@string/delete" />
        
    </LinearLayout>
        
    <TextView
        android:id="@+id/lblAddEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/add_ingredient"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="#000000" />

    <EditText
        android:id="@+id/txtType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:ems="10"
        android:hint="@string/ingredient" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="14dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtUnit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:hint="@string/unit"
        android:ems="10" />

</LinearLayout>
