<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/add" />
        
        <Button
            android:id="@+id/btnShowAll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/show_all" />

    </LinearLayout>

    <TextView
        android:id="@+id/results_label"
        android:layout_below="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/my_kitchen"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/separator"
        android:layout_below="@+id/results_label"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/listResults"
        android:layout_below="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

    <SlidingDrawer
        android:id="@+id/sldSearch"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentBottom="true"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/search_criteria"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="#000000" />

            <EditText
                android:id="@+id/txtKeywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:hint="@string/keywords" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/handle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/search" />
        </RelativeLayout>
    </SlidingDrawer>

</RelativeLayout>
