<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:orientation="horizontal" >

        <Button
            android1:id="@+id/button_main_add"
            android1:layout_width="0dip"
            android1:layout_height="wrap_content"
            android1:layout_weight="1"
            android1:text="@string/main_add_button" />

        <Button
            android1:id="@+id/button_main_search"
            android1:layout_width="0dip"
            android1:layout_height="wrap_content"
            android1:layout_weight="1"
            android1:text="@string/main_search_button" />

        <Button
            android1:id="@+id/button_main_mykitchen"
            android1:layout_width="0dip"
            android1:layout_height="wrap_content"
            android1:layout_weight="1.5"
            android1:text="@string/main_mykitchen_button" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/recipeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>